fixed dark mode for admin dashboard

--- a/WarehousePilot_app/frontend/src/index.css
+++ b/WarehousePilot_app/frontend/src/index.css
@@ -3,11 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+:root {
+  --background-color-light: #ffffff;
+  --background-color-dark: #121212;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-size: 12px;
-  /* background-color: #ffffff; */
+ 
   /* overflow: auto;
   Allow body to scroll */
   height: 100vh; /* Ensure body takes up full viewport height */
@@ -15,13 +21,18 @@ body {
 }
 html {
   transition: background-color 0.3s ease;
+  
 }
-/* @media (prefers-color-scheme: dark) {
+html, body {
+  background-color: var(--background-color-light);
+}
+
+@media (prefers-color-scheme: dark) {
   body {
-    background-color: #121212; 
+    background-color: var(--background-color-dark);
   }
-} */
-/* Apply dark mode styles to the entire document */
+} 
+/* Apply dark mode styles to the entire document
 
 /* authentication.css */
 /* .custom-gray-button {
